# alliance_radar_location_lidar

./: .clang-tidy  .clangd  .coderabbit.yaml  .gitignore  .gitmodules  Dockerfile  README.md  format-radar
.devcontainer/: devcontainer.json  docker-compose.yml  post-create.sh
.github/workflows/: build-image.yml  build.yml  docker-hub.yml
.script/: asan-lio-test  bag-replay  bag-to-map  build-all  build-radar  calibrate-camera  export-compile-commands  format-radar  odin-cloud-rgba  odin-diagnose  odin-get-extrinsic  odin-imu-allan-analyze.py  odin-imu-allan-collect  odin-lio-test  odin-lio-validate  odin-lio-watch  odin-localization  odin-map-export  odin-map-save  odin-record  offline-detection  offline-test  pcd-foxglove  run-radar  setup-clangd-headers
.script/analyze/: read_pcd.py
.script/template/: clangd.template  env_setup.bash  env_setup.zsh
docker/scripts/: 06_banner.sh  ow_logo.txt
docs/: todo.md
docs/architecture/: alliance-radar-overall-architecture.md
docs/conventions/: cpp-naming.md
docs/superpowers/plans/: 2026-07-22-hik-shm-fast-livo2.md  2026-07-23-radar-camera-yolo-unit-tests.md
docs/superpowers/specs/: 2026-07-01-offline-registration-redesign-design.md  2026-07-22-hik-shm-fast-livo2-design.md  2026-07-23-radar-camera-yolo-unit-tests-design.md
docs/todo/: todo.md
ros_ws/: .gitignore  LEARNLOG.md
ros_ws/src/radar_bridge/: CMakeLists.txt  package.xml
ros_ws/src/radar_bridge/config/: radar_bridge_params.yaml
ros_ws/src/radar_bridge/include/radar_bridge/: radar_bridge_node.hpp  udpstream_bridge.hpp  videostream_bridge.hpp  zmq_bridge.hpp  zmq_data_format.hpp
ros_ws/src/radar_bridge/src/: radar_bridge_node.cpp  runtime.cpp  videostream_bridge.cpp  zmq_bridge.cpp
ros_ws/src/radar_bringup/: package.xml
ros_ws/src/radar_bringup/config/camera/: hikcamera.yaml  radar_camera.yaml
ros_ws/src/radar_bringup/config/common/: extrinsics.yaml
ros_ws/src/radar_bringup/config/lidar/: blue_initial_pose.yaml  odin_driver_lio.yaml  odin_driver_relocalization.yaml  odin_driver_slam.yaml  red_initial_pose.yaml
ros_ws/src/radar_bringup/launch/: competition.launch.py  hikcamera.launch.py  localization.launch.py  odin_fast_livo2_mapping.launch.py  odin_localization.launch.py  odin_relocalization_localization.launch.py  odin_slam_mapping.launch.py  offline_registration.launch.py  radar_bridge.launch.py  radar_camera.launch.py  static_tf.launch.py
ros_ws/src/radar_calibration/: CMakeLists.txt  package.xml
ros_ws/src/radar_calibration/config/: initial_guess.yaml
ros_ws/src/radar_calibration/include/radar_calibration/: camera_lidar_calibration.hpp
ros_ws/src/radar_calibration/src/: camera_lidar_calibration.cpp  running.cpp
ros_ws/src/radar_calibration/test/: test_camera_lidar_calibration.cpp
ros_ws/src/radar_camera/: CMakeLists.txt  package.xml
ros_ws/src/radar_camera/config/: radar_camera.yaml
ros_ws/src/radar_camera/include/radar_camera/: data_format.hpp  model_inference.hpp  preprocess.hpp  projector.hpp  radar_camera_node.hpp  ray_cast_map.hpp
ros_ws/src/radar_camera/src/: model_inference.cpp  preprocess.cpp  projector.cpp  radar_camera_node.cpp  ray_cast_map.cpp  runtime.cpp
ros_ws/src/radar_camera/test/: annotate_detections.py  test_model_inference.cpp  test_projector.cpp
ros_ws/src/radar_fast_livo2/: CMakeLists.txt  package.xml
ros_ws/src/radar_fast_livo2/config/: odin_livo2.yaml
ros_ws/src/radar_fast_livo2/include/radar_fast_livo2/: common_lib.hpp  esikf_state.hpp  imu_processing.hpp  preprocess.hpp  vio.hpp  voxel_map.hpp
ros_ws/src/radar_fast_livo2/src/: imu_processing.cpp  livmapper_node.cpp  preprocess.cpp  vio.cpp  voxel_map.cpp
ros_ws/src/radar_fusion/: CMakeLists.txt  package.xml
ros_ws/src/radar_fusion/include/radar_fusion/: data_format.hpp  fusion_node.hpp  kalman_tracker.hpp  radar_fusion_node.hpp
ros_ws/src/radar_fusion/src/: fusion_node.cpp  kalman_tracker.cpp  radar_fusion_node.cpp  runtime.cpp
ros_ws/src/radar_fusion/test/: test_fusion_node.cpp  test_kalman_tracker.cpp
ros_ws/src/radar_interfaces/: CMakeLists.txt  package.xml
ros_ws/src/radar_interfaces/msg/: .gitkeep  CameraDetectionPose.msg  GameState.msg  LidarLocation.msg
ros_ws/src/radar_lidar/: CMakeLists.txt  package.xml
ros_ws/src/radar_lidar/config/: mid70.yaml  odin.yaml  odin_relocalization.yaml  offline_detection.yaml  offline_registration.yaml  runtime.yaml
ros_ws/src/radar_lidar/include/radar_lidar/: cluster.hpp  cluster_stage.hpp  config.hpp  data_format.hpp  dynamic_cloud.hpp  dynamic_cloud_stage.hpp  frame_accumulator.hpp  geometry_utils.hpp  localization.hpp  localization_stage.hpp  map_data.hpp  offline_visualization.hpp  pipeline.hpp  radar_lidar_node.hpp  spherical_grid.hpp  types.hpp
ros_ws/src/radar_lidar/src/: cluster.cpp  cluster_stage.cpp  dynamic_cloud.cpp  dynamic_cloud_stage.cpp  frame_accumulator.cpp  localization.cpp  localization_stage.cpp  map_data.cpp  pipeline.cpp  radar_lidar_node.cpp  runtime.cpp  spherical_grid.cpp
ros_ws/src/radar_lidar/test/: test_detection.cpp  test_frame_accumulator.cpp  test_localization.cpp  test_localization_roi.cpp  test_map_data.cpp  test_offline_registration.cpp  test_offline_visualization.cpp  test_radar_lidar_node.cpp  test_spherical_grid.cpp
ros_ws/src/radar_lidar/tools/: offline_detection_node.cpp  offline_detection_runtime.cpp  offline_pipeline.cpp  offline_registration.cpp  offline_test_node.cpp  offline_test_runtime.cpp  registration_tool.cpp
ros_ws/src/radar_lidar/tools/radar_lidar/: offline_detection_node.hpp  offline_pipeline.hpp  offline_registration.hpp  offline_test_node.hpp  offline_visualization.hpp
ros_ws/tool/logger/: logger.hpp  logger_config.hpp
scripts/: migrate_prs.py
tools/: README.md
tools/bag_to_pcd/: bag_to_pcd.py
tools/camera_calib/: calib_camera.py
tools/jinan_to_scan/: CMakeLists.txt  build.sh  extract_by_index.cpp  jinan_to_xyz.cpp
tools/logger/: logger.hpp  logger_config.hpp
tools/make_synth_scan/: make_synth_scan.py
tools/model_to_map/src/: model_to_map.cpp
tools/pcd_postprocess/: pcd_postprocess.py
