<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>radar_fast_livo2</name>
  <version>0.0.1</version>
  <description>FAST-LIVO2 LiDAR-IMU-Visual odometry adapted for Odin1 dToF + HIK camera (ROS2 port)</description>
  <maintainer email="huangziang_2024@qq.com">Your Name</maintainer>
  <license>GPL-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>libpcl-all-dev</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>eigen</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>ament_cmake_auto</depend>

  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
